# drf-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/migrations/: 0001_initial.py  0002_alter_customuser_id.py
blog/: settings.py  urls.py
post/: models.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_author.py
