[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["AhmadShalein <ahmadshalein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
black = "^21.8b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
